--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-uglify": "^2.0.0"
+  },
+  "dependencies": {
+    "gulp-less": "^3.2.0",
+    "gulp-sitemap": "^4.2.0"
   }
 }
