--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "gulp-jade": "^1.1.0",
     "gulp-less": "^3.2.0",
-    "gulp-sitemap": "^4.2.0"
+    "gulp-sitemap": "^4.2.0",
+    "jquery": "^3.1.1"
   }
 }
