Gulp less and css task with new improvements

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "gulp-ignore": "^2.0.2",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.2.0",
     "gulp-sitemap": "^4.2.0",
